--- a/style.css
+++ b/style.css
@@ -2,4 +2,30 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  text-align: center;
+}
+nav {
+  a {
+    background-color: grey;
+    padding: 10px;
+  }
+}
+figcaption {
+  font-size: small;
+  text-align: center;
+}
+#featured-property {
+  p {
+    width: 800px;
+    margin: 0 auto;
+    padding: 10px 0;
+    text-align: center;
+    line-height: 10px;
+  }
+}
+#details {
+  background-color: red;
+  text-align: center;
+  display: flex;
+  justify-content: space-around;
 }
